// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > action column 1`] = `
.c4 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c4 * {
  width: 1px;
  height: 1px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 15 1.5 auto;
  font-family: "Open Sans", sans-serif;
  font-weight: 400;
  min-width: 225px;
  padding: 24px 16px 0px;
  text-align: left;
  overflow-wrap: break-word;
  word-break: break-word;
  height: 100%;
  position: relative;
  font-size: 1rem;
  width: 100%;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
}

.c1:focus {
  outline: none;
}

<div
  class="c0 c1 table__headerCell table__headerCell--15 table__actionCell"
  data-role="table-header-cell"
  data-type="table-action-cell"
  data-width="1.5"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
  <span
    class="c4 -u-unseenButRead"
    data-role="hidden-text"
  >
    Action
  </span>
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > alignment 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c1 {
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
  align-items: flex-start;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--align-top"
  data-role="table-header-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > alignment 2`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10"
  data-role="table-header-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > alignment 3`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

.c1 {
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
  align-items: flex-end;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--align-bottom"
  data-role="table-header-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > alignment 4`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
  justify-content: center;
  text-align: center;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c1 {
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
  align-items: flex-start;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--align-center table__headerCell--align-top"
  data-role="table-header-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > alignment 5`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
  justify-content: center;
  text-align: center;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--align-center"
  data-role="table-header-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > alignment 6`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
  justify-content: center;
  text-align: center;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

.c1 {
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
  align-items: flex-end;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--align-center table__headerCell--align-bottom"
  data-role="table-header-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > alignment 7`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
  justify-content: flex-end;
  text-align: right;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c1 {
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
  align-items: flex-start;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--align-right table__headerCell--align-top"
  data-role="table-header-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > alignment 8`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
  justify-content: flex-end;
  text-align: right;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--align-right"
  data-role="table-header-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > alignment 9`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
  justify-content: flex-end;
  text-align: right;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

.c1 {
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
  align-items: flex-end;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--align-right table__headerCell--align-bottom"
  data-role="table-header-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > card view 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-weight: 400;
  min-width: 150px;
  padding: 24px 8px 8px;
  text-align: left;
  overflow-wrap: break-word;
  word-break: break-word;
  position: relative;
  font-size: 1rem;
  width: 100%;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10"
  data-role="table-header-cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > column group 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
  justify-content: center;
  text-align: center;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--align-center"
  data-role="table-header-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > default 1`] = `
.c4 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c4 * {
  width: 1px;
  height: 1px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 0 0 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 225px;
  padding: 0px 24px;
  text-align: left;
  width: 225px;
  overflow-wrap: break-word;
  word-break: break-word;
  color: rgb(77, 77, 77);
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c0 > * {
  color: rgb(77, 77, 77);
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  background-color: rgb(227, 229, 233);
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c1.c1.c1.c1:last-of-type {
  box-shadow: none;
}

<div
  class="c0 c1 table__headerCell table__headerCell--15 table__headerCell--fixedWidth table__headerCell--sub-info"
  data-role="table-header-cell"
  data-width="1.5"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
  <span
    class="c4 -u-unseenButRead"
    data-role="hidden-text"
  >
    title test
  </span>
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > fixedWidth > with resizing columns > should depend on whether the normal column is rightmost scroll or not 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 0 0 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c0 [data-head-cell-resizing="true"] div {
  background-color: transparent;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--fixedWidth"
  data-role="table-header-cell"
  data-type="false"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > fixedWidth > with resizing columns > should depend on whether the normal column is rightmost scroll or not 2`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c0 [data-head-cell-resizing="true"] div {
  background-color: transparent;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10"
  data-role="table-header-cell"
  data-type="false"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > fixedWidth > with resizing columns > should not for action column 1`] = `
.c4 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c4 * {
  width: 1px;
  height: 1px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 0 0 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: unset;
  padding: 0px 16px;
  text-align: left;
  width: unset;
  overflow-wrap: break-word;
  word-break: break-word;
  height: 100%;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c0 [data-head-cell-resizing="true"] div {
  background-color: transparent;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
}

.c1:focus {
  outline: none;
}

.c2 .c7.c7 {
  overflow: hidden;
}

.c2 .c8.c8 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__actionCell"
  data-role="table-header-cell"
  data-type="table-action-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
  <span
    class="c4 -u-unseenButRead"
    data-role="hidden-text"
  >
    Action
  </span>
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > fixedWidth > without resizing columns > should be if props.fixedWidth = true 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 0 0 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--fixedWidth"
  data-role="table-header-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > fixedWidth > without resizing columns > should be if the column is not action column but pinned 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 0 0 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10 table__headerCell--fixedWidth"
  data-role="table-header-cell"
  data-type="false"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > fixedWidth > without resizing columns > should not be for normal column 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c4.c4 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
  padding: 2px 8px;
}

.c1:focus {
  outline: none;
}

.c2 .c1.c1 {
  overflow: hidden;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__headerCell--10"
  data-role="table-header-cell"
  data-type="false"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.table.head-filter-cell > fixedWidth > without resizing columns > should not for action column 1`] = `
.c4 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c4 * {
  width: 1px;
  height: 1px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 0 0 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: unset;
  padding: 0px 16px;
  text-align: left;
  width: unset;
  overflow-wrap: break-word;
  word-break: break-word;
  height: 100%;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c3 {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  line-height: normal;
  min-height: 22px;
}

.c2 .c5.c5 {
  overflow: hidden;
}

.c2 .c6.c6 {
  overflow: hidden;
}

.c1 {
  align-items: center;
  color: rgb(77, 77, 77);
  cursor: default;
  font-size: 0.75rem;
  font-weight: 600;
  min-height: 26px;
  position: relative;
}

.c1:focus {
  outline: none;
}

.c2 .c7.c7 {
  overflow: hidden;
}

.c2 .c8.c8 {
  overflow: hidden;
}

<div
  class="c0 c1 table__headerCell table__actionCell"
  data-role="table-header-cell"
  data-type="table-action-cell"
  role="cell"
>
  <div
    class="c2 c3 table__contentHeaderCell"
    data-role="table-header-cell-content"
  />
  <span
    class="c4 -u-unseenButRead"
    data-role="hidden-text"
  >
    Action
  </span>
</div>
`;
